syntax = "proto3";

package unitdb;

option go_package='.;unitdb';

// PLugin interface
service Plugin {
rpc Start (ConnInfo) returns (ConnInfo){}

rpc Stream (stream Packet) returns (stream Packet);

rpc Stop (Empty) returns (Empty){}
}

message Empty {
}

message Packet {
bytes data=1;
}

message ConnInfo {
string client_id=1;
string network=2;
string address=3;
}

message InMsg {
	oneof Message {
		Pingreq pingreq = 1;
		Subscribe sub = 2;
		Unsubscribe unsub = 3;
		Publish pub=4;
	}
}

message OutMsg {
	oneof Message {
		Pingresp pingresp = 1;
		Suback suback = 2;
		Unsuback unsuback = 3;
		Publish pub = 4;
		Puback puback = 5;
	}
}

enum MessageType {
	RESERVED  = 0;
	CONNECT=1;
	CONNACK=2;
	PUBLISH=3;
	PUBACK=4;
	SUBSCRIBE=8;
	SUBACK=9;
	UNSUBSCRIBE=10;
	UNSUBACK=11;
	PINGREQ=12;
	PINGRESP=13;
	DISCONNECT=14;
}

message FixedHeader {
	MessageType MessageType = 1;
	int32 RemainingLength=5;
}

// Connect represents a connect packet.
message Conn {
	string ProtoName=1;
	int32 Version=2;
	bool InsecureFlag=3;
	bool UsernameFlag=4;
	bool PasswordFlag=5;
	bool CleanSessFlag=9;
	int32 KeepAlive=10;
	string ClientID=11;
	string Username=14;
	string Password=15;
}

// Connack represents a connack packet.
// 0x00 connection accepted
// 0x01 refused: unacceptable proto version
// 0x02 refused: identifier rejected
// 0x03 refused server unavailiable
// 0x04 bad user or password
// 0x05 not authorized
message Connack {
	int32 ReturnCode=1;
	int32 ConnID=2;
}

//Pingreq is a keepalive
message Pingreq {
}

//Pingresp is for saying "hey, the server is alive"
message Pingresp {
}

//Disconnect is to signal you want to cease communications with the server
message Disconnect {
	int32 MessageID=1;
}

// Publish represents a publish packet.
message Publish {
	int32 MessageID=1;
	string Topic=2;
	string Payload=3;
}

//Puback is sent to verify the receipt of a publish
message Puback {
	int32 MessageID=1;
}

//Subscriber is pairing the Qos and topic together
//for the QOS' pairs in unsubscribe and subscribe
message Subscriber {
	string Topic=1;
}

//Subscribe tells the server which topics the client would like to subscribe to
message Subscribe {
	int32 MessageID=1;
	repeated Subscriber Subscribers=2;
}

//Suback is to say "hey, you got it buddy. I will send you messages that fit this pattern"
message Suback {
	int32 MessageID=1;
}

//Unsubscribe is the Packet to send if you don't want to subscribe to a topic anymore
message Unsubscribe {
	int32 MessageID=1;
	repeated Subscriber Subscribers=2;
}

//Unsuback is to unsubscribe as suback is to subscribe
message Unsuback {
	int32 MessageID=1;
}